--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <button>Click here!</button>
+    <button id="myButton">Click here!</button>
+    <h1 id="welcomeMessage"></h1>
+    <script src="script.js" ></script>
 </body>
 </html>
