--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="myButton">Click here!</button>
-    <h1 id="welcomeMessage"></h1>
+    <input type="text" name="test" id="input">
+    <button id="add_text">+</button>
+    <h1 id="output"></h1>
     <script src="script.js" ></script>
 </body>
 </html>
