--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <button id="add_text">+</button>
     <h1 id="output"></h1>
     <script src="script.js" ></script>
+    <h1>test</h1>
 </body>
 </html>
