--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <input type="text" name="test" id="input">
-    <button id="add_text">+</button>
-    <h1 id="output"></h1>
+    <button id="add_text">convert</button>
+    <p id="output"></p>
     <script src="script.js" ></script>
 </body>
 </html>
